Création du managedbean homeMB et modification de home.xhtml, requetedaoimpl
et de requete

--- a/TicketSystem/nbproject/private/private.properties
+++ b/TicketSystem/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 j2ee.server.domain=/home/william/Documents/jboss-as-7.1.1.Final DCS/standalone
 j2ee.server.home=/home/william/Documents/jboss-as-7.1.1.Final DCS
 j2ee.server.instance=jboss-deployer://localhost:8080?targetType=as7#standalone&/home/william/Documents/jboss-as-7.1.1.Final DCS
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/william/.netbeans/8.1/build.properties
