--- a/TicketSystem/nbproject/project.properties
+++ b/TicketSystem/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin.jar=/usr/local/netbeans-8.1/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +42,8 @@ j2ee.server.type=JBoss4
 jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
